--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
     </div>
     <div class="site-subtitle font-italic">{{ site.tagline }}</div>
 
+
   </div><!-- .profile-wrapper -->
 
   <ul class="w-100">
@@ -48,11 +49,12 @@
       </a>
     </li> <!-- .nav-item -->
     {% endfor %}
+    
 
   </ul> <!-- ul.nav.flex-column -->
-
+  
   <div class="sidebar-bottom mt-auto d-flex flex-wrap justify-content-center align-items-center">
-
+    
     {% for entry in site.data.contact %}
       {% capture url %}
         {%- if entry.type == 'github' -%}
@@ -88,6 +90,7 @@
         {% include mode-toggle.html %}
       </span>
     {% endunless %}
+    <script src="https://tryhackme.com/badge/252485"></script>
 
   </div> <!-- .sidebar-bottom -->
 
